# fg_converter

./: Accumulator64B.cpp  CMakeLists.txt  Convert  Interpolation.cpp  Interpolation.h  LSAParameter.cpp  LSAParameter.h  LSAtoFPGA.cpp  LSAtoFPGA.h  Makefile  README.md  TXTDATA.h  main.cpp  rootheaders.hh
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml
src/: Accumulator64B.cpp  Accumulator64B.h  Interpolation.cpp  LSAParameter.cpp  LSAtoFPGA.cpp  TXTDATA.cpp  TXTDATA.h  rootheaders.hh
